# test-bazel-drone

./: .bazelrc  .drone.yaml  .drone.yml  .gitignore  BUILD.bazel  WORKSPACE  go.mod  go.mod.bzl  main.go  main_test.go
.github/workflows/: lol.yaml
hack/: bazel-status.sh  build.sh  release-image.sh  test.sh  update-deps.sh
